# divami-agents

./: .divami-skills.toml  .gitignore  .vyasa  Makefile  README.md  cli.py  manager.py  pyproject.toml  tui.py  web-ui.py
divami_skills/: cli.py  manager.py  tui.py
docs/: .vyasa  business-requirements.md  pipelines-overview.md
docs/conversations/: 20260414-meeting-transcript-mom.md
handbook/: admin.md  developer.md  end-user.md  ops.md
scripts/: pack.py  readme-preamble.md  update-readme.py
skills/: startup.md
skills/cleanup-and-refactor/: SKILL.md
skills/code-refactoring/: SKILL.md
skills/code-review/: SKILL.md
skills/convo-with-me/: SKILL.md
skills/daksh/: SKILL.md  pytest.ini
skills/doc-narrator/: SKILL.md
skills/export-chat-to-divami-vyasa/: SKILL.md  export_chat.py
skills/find-skills/: SKILL.md
skills/gws-chat/: SKILL.md
skills/gws-chat-send/: SKILL.md
skills/gws-classroom/: SKILL.md
skills/gws-docs/: SKILL.md
skills/gws-docs-write/: SKILL.md
skills/gws-gmail/: SKILL.md
skills/gws-gmail-read/: SKILL.md
skills/gws-gmail-triage/: SKILL.md
skills/gws-gmail-watch/: SKILL.md
skills/gws-meet/: SKILL.md
skills/gws-shared/: SKILL.md
skills/handbook/: admin.md  end-user.md  ops.md
skills/icm-skill-creator/: SKILL.md
skills/jira-access/: SKILL.md
skills/lit-parse/: SKILL.md
skills/minutes-of-meeting/: SKILL.md
skills/retrospect-and-update-skill/: SKILL.md
skills/scripts/: download_meeting_transcript.py
skills/tech-feasibility/: SKILL.md
skills/use-cases/: SKILL.md
tests/: test_manager.py
(+126 files in other folders)
