[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "divami-agents"
version = "0.2.1"
description = "Divami Claude Code skills and agent toolkit"
requires-python = ">=3.9"
dependencies = ["pyzipper", "textual", "tomli; python_version < '3.11'"]

[project.scripts]
divami-agents = "divami_skills.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["divami_skills*"]

[tool.setuptools.package-data]
divami_skills = ["skills.zip"]
